# chroma-crash

./: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
chroma_crash/: app.py
